Fix the paginator buttons so they can shrink and not overlap

--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -21,3 +21,8 @@ header a,
 footer a {
   @apply .text-yellow-dark;
 }
+
+*:disabled,
+select[disabled] > option {
+  @apply text-grey;
+}
